// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#onAutocomplete will correctly format an API response 1`] = `
Object {
  "autocompletedResults": Array [
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "Jahia <em>cluster</em> <em>setup</em> ... The Jahia Team Jahia <em>cluster</em> <em>setup</em> Here are the steps followed to install an Jahia <em>cluster</em> for a production environment. We will also detail",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/techwiki/misc/dx-cluster-setup.html",
      },
      "score": Object {
        "raw": 65.67353057861328,
      },
      "title": Object {
        "raw": "Jahia cluster setup",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "ElasticSearch / Unomi <em>cluster</em> <em>setup</em> ... The Jahia Team ElasticSearch / Unomi <em>cluster</em> <em>setup</em> Please note that the following instructions are not 100% valid for JExperience 1.10.1 and Apache",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/techwiki/misc/elasticsearch--unomi-cluster-setup.html",
      },
      "score": Object {
        "raw": 58.33796310424805,
      },
      "title": Object {
        "raw": "ElasticSearch / Unomi cluster setup",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "6 - <em>Cluster</em> <em>setup</em> ... The Jahia Team 6 - <em>Cluster</em> <em>setup</em> 6.1 Discovery

6.1.1 Overview

Discovery must be configured on every layer of the <em>cluster</em> architecture",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/legacy-1/marketing-factory/18/technical/installation-configuration-and-f/6---cluster-setup.html",
      },
      "score": Object {
        "raw": 56.66311264038086,
      },
      "title": Object {
        "raw": "6 - Cluster setup",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " during the Digital Experience Manager configuration wizard (<em>cluster</em> installation), please restore it at the appropriate location.

Remove the 2 “lock ...  (DX 7.2.1.1+)

The safe backup restore here is only relevant, when you are restoring a DX <em>clustered</em> backup at another infrastructure, say cloning",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/72/technical/configuration-and-fine-tuning/faq.html",
      },
      "score": Object {
        "raw": 6.531671047210693,
      },
      "title": Object {
        "raw": "FAQs",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "
|_________indexing_configuration_version.xml

If you have chosen an alternative location of the datastore folder during the Jahia configuration wizard (<em>cluster</em> installation ...  keep the former indexes to save time.

Safe backup restore

The safe backup restore here is only relevant, when you are restoring a Jahia <em>clustered</em>",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/73/technical/configuration-and-fine-tuning/faq.html",
      },
      "score": Object {
        "raw": 6.531671047210693,
      },
      "title": Object {
        "raw": "FAQs",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " during the Digital Experience Manager configuration wizard (<em>cluster</em> installation), please restore it at the appropriate location.

Remove the 2 “lock ...  of a restored DX instance.

It includes currently:


 the purge of the JGROUPSPING database table data, which is responsible for the <em>cluster</em> membership",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/trash/dx-new-docs-do-not-suppress/technical/configuration-and-fine-tuning/faq.html",
      },
      "score": Object {
        "raw": 6.531671047210693,
      },
      "title": Object {
        "raw": "FAQ",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " for <em>clustering</em> settings. Since Digital Experience Manager 7.0.0.2 the runtime data and configuration files are located outside the Web application ...  features and services.
 jahia.node.properties – configuration file for the <em>clustering</em> options
 license.xml – is a file with your current Digital",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/trash/dx-new-docs-do-not-suppress/technical/configuration-and-fine-tuning/configuring.html",
      },
      "score": Object {
        "raw": 4.4613118171691895,
      },
      "title": Object {
        "raw": "Configuring",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " configuration options are gathered in the jahia.properties and jahia.node.properties files. The latter one is responsible only for <em>clustering</em> settings. Since ...  and services.
 jahia.node.properties – configuration file for the <em>clustering</em> options
 license.xml – is a file with your current Digital Experience Manager",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/72/technical/configuration-and-fine-tuning/configuring.html",
      },
      "score": Object {
        "raw": 4.4613118171691895,
      },
      "title": Object {
        "raw": "Configuring DX features",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " are gathered in the jahia.properties and jahia.node.properties files. The latter one is responsible only for <em>clustering</em> settings. The runtime data ...  and services.
 jahia.node.properties – configuration file for the <em>clustering</em> options
 license.xml – is a file with your current Jahia license",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/73/technical/configuration-and-fine-tuning/configuring.html",
      },
      "score": Object {
        "raw": 4.4613118171691895,
      },
      "title": Object {
        "raw": "Configuring Jahia features",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/trash/dx-new-docs-do-not-suppress/development/development-best-practices.html",
      },
      "score": Object {
        "raw": 4.233768463134766,
      },
      "title": Object {
        "raw": "Development Best Practices",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/72/development/development-best-practices.html",
      },
      "score": Object {
        "raw": 4.233768463134766,
      },
      "title": Object {
        "raw": "Development best practices",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/73/development/development-best-practices.html",
      },
      "score": Object {
        "raw": 4.233768463134766,
      },
      "title": Object {
        "raw": "Development best practices",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "AELB-26 qa At installation time, Jahia generate a UUID to ensure that each <em>cluster</em> node id is unique.
From https://wiki.apache.org/jackrabbit ... /<em>Clustering</em>#Unique_Cluster_Node_ID it is safe to use any kind of identifier for this property as long as this ID is unique on each <em>cluster</em> nodes. It could",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/training--kb/how-to.html",
      },
      "score": Object {
        "raw": 1.6895579099655151,
      },
      "title": Object {
        "raw": "Knowledge Base",
      },
    },
  ],
}
`;

exports[`#onAutocomplete will not return anything for suggestions 1`] = `Object {}`;

exports[`#onAutocompleteResultClick will call the API with the correct body params 1`] = `undefined`;

exports[`#onSearch will correctly format an API response 1`] = `
Object {
  "facets": Object {
    "jfs:lastModified": Array [
      Object {
        "data": Array [
          Object {
            "count": 91,
            "value": Object {
              "from": "2018-09-26T19:06:47.388Z",
              "name": "last year",
              "to": "2019-09-26T19:06:47.388Z",
            },
          },
        ],
        "field": "jfs:lastModified",
        "type": "date_range",
      },
    ],
    "jfs:tags": Array [
      Object {
        "data": Array [
          Object {
            "count": 1,
            "value": "cluster",
          },
        ],
        "field": "jfs:tags",
        "type": "sterms",
      },
    ],
  },
  "requestId": "",
  "results": Array [
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "Jahia <em>cluster</em> <em>setup</em> ... The Jahia Team Jahia <em>cluster</em> <em>setup</em> Here are the steps followed to install an Jahia <em>cluster</em> for a production environment. We will also detail",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/techwiki/misc/dx-cluster-setup.html",
      },
      "score": Object {
        "raw": 65.67353057861328,
      },
      "title": Object {
        "raw": "Jahia cluster setup",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "ElasticSearch / Unomi <em>cluster</em> <em>setup</em> ... The Jahia Team ElasticSearch / Unomi <em>cluster</em> <em>setup</em> Please note that the following instructions are not 100% valid for JExperience 1.10.1 and Apache",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/techwiki/misc/elasticsearch--unomi-cluster-setup.html",
      },
      "score": Object {
        "raw": 58.33796310424805,
      },
      "title": Object {
        "raw": "ElasticSearch / Unomi cluster setup",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "6 - <em>Cluster</em> <em>setup</em> ... The Jahia Team 6 - <em>Cluster</em> <em>setup</em> 6.1 Discovery

6.1.1 Overview

Discovery must be configured on every layer of the <em>cluster</em> architecture",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/legacy-1/marketing-factory/18/technical/installation-configuration-and-f/6---cluster-setup.html",
      },
      "score": Object {
        "raw": 56.66311264038086,
      },
      "title": Object {
        "raw": "6 - Cluster setup",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " during the Digital Experience Manager configuration wizard (<em>cluster</em> installation), please restore it at the appropriate location.

Remove the 2 “lock ...  (DX 7.2.1.1+)

The safe backup restore here is only relevant, when you are restoring a DX <em>clustered</em> backup at another infrastructure, say cloning",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/72/technical/configuration-and-fine-tuning/faq.html",
      },
      "score": Object {
        "raw": 6.531671047210693,
      },
      "title": Object {
        "raw": "FAQs",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "
|_________indexing_configuration_version.xml

If you have chosen an alternative location of the datastore folder during the Jahia configuration wizard (<em>cluster</em> installation ...  keep the former indexes to save time.

Safe backup restore

The safe backup restore here is only relevant, when you are restoring a Jahia <em>clustered</em>",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/73/technical/configuration-and-fine-tuning/faq.html",
      },
      "score": Object {
        "raw": 6.531671047210693,
      },
      "title": Object {
        "raw": "FAQs",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " during the Digital Experience Manager configuration wizard (<em>cluster</em> installation), please restore it at the appropriate location.

Remove the 2 “lock ...  of a restored DX instance.

It includes currently:


 the purge of the JGROUPSPING database table data, which is responsible for the <em>cluster</em> membership",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/trash/dx-new-docs-do-not-suppress/technical/configuration-and-fine-tuning/faq.html",
      },
      "score": Object {
        "raw": 6.531671047210693,
      },
      "title": Object {
        "raw": "FAQ",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " for <em>clustering</em> settings. Since Digital Experience Manager 7.0.0.2 the runtime data and configuration files are located outside the Web application ...  features and services.
 jahia.node.properties – configuration file for the <em>clustering</em> options
 license.xml – is a file with your current Digital",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/trash/dx-new-docs-do-not-suppress/technical/configuration-and-fine-tuning/configuring.html",
      },
      "score": Object {
        "raw": 4.4613118171691895,
      },
      "title": Object {
        "raw": "Configuring",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " configuration options are gathered in the jahia.properties and jahia.node.properties files. The latter one is responsible only for <em>clustering</em> settings. Since ...  and services.
 jahia.node.properties – configuration file for the <em>clustering</em> options
 license.xml – is a file with your current Digital Experience Manager",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/72/technical/configuration-and-fine-tuning/configuring.html",
      },
      "score": Object {
        "raw": 4.4613118171691895,
      },
      "title": Object {
        "raw": "Configuring DX features",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": " are gathered in the jahia.properties and jahia.node.properties files. The latter one is responsible only for <em>clustering</em> settings. The runtime data ...  and services.
 jahia.node.properties – configuration file for the <em>clustering</em> options
 license.xml – is a file with your current Jahia license",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/system-administrator/dx/73/technical/configuration-and-fine-tuning/configuring.html",
      },
      "score": Object {
        "raw": 4.4613118171691895,
      },
      "title": Object {
        "raw": "Configuring Jahia features",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/trash/dx-new-docs-do-not-suppress/development/development-best-practices.html",
      },
      "score": Object {
        "raw": 4.233768463134766,
      },
      "title": Object {
        "raw": "Development Best Practices",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/72/development/development-best-practices.html",
      },
      "score": Object {
        "raw": 4.233768463134766,
      },
      "title": Object {
        "raw": "Development best practices",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/documentation/developer/dx/73/development/development-best-practices.html",
      },
      "score": Object {
        "raw": 4.233768463134766,
      },
      "title": Object {
        "raw": "Development best practices",
      },
    },
    Object {
      "created": Object {
        "raw": "2016-01-12T23:14:03.248+01:00",
      },
      "excerpt": Object {
        "snippet": "AELB-26 qa At installation time, Jahia generate a UUID to ensure that each <em>cluster</em> node id is unique.
From https://wiki.apache.org/jackrabbit ... /<em>Clustering</em>#Unique_Cluster_Node_ID it is safe to use any kind of identifier for this property as long as this ID is unique on each <em>cluster</em> nodes. It could",
      },
      "id": Object {
        "raw": "e567c804-7d9b-4652-bb28-250095457015",
      },
      "link": Object {
        "raw": "http://localhost/cms/render/default/en/sites/academy/home/training--kb/how-to.html",
      },
      "score": Object {
        "raw": 1.6895579099655151,
      },
      "title": Object {
        "raw": "Knowledge Base",
      },
    },
  ],
  "totalPages": NaN,
  "totalResults": 13,
}
`;
